# impact

./: README.md
impact_camera_calibration/impact_camera_calibration_control/: CMakeLists.txt  package.xml
impact_camera_calibration/impact_camera_calibration_description/: CMakeLists.txt  package.xml
impact_camera_calibration/impact_camera_calibration_description/scripts/: camera.py
impact_camera_calibration/impact_camera_calibration_description/urdf/: calibration.urdf  calibration.urdf.xacro
impact_control/: CMakeLists.txt  package.xml
impact_control/config/: components.yaml
impact_control/scripts/: control.py
impact_motion/: CMakeLists.txt  package.xml
impact_motion/scripts/: ar3_wheeltec.py  camera_stream.py  edge_detection.py  gazebo_conveyor.py  gripper_simple.py  gripper_test.py  iso.py  m.py  motion.py  object_static_transform.py  planning.py  pub.py  pub_sub.py  sub.py  test_gripper_class
impact_motion/src/: motion.cpp  pub.py  wheeltec_gripper_pub_sub.py
impact_motion/test/: main.cpp  motion_test.cpp
impact_sensor/: CMakeLists.txt  package.xml
impact_sensor/launch/: sensor.launch
impact_sensor/scripts/: camera_sensor.py
impact_solutions/: README.md
impact_urdf/: CMakeLists.txt  package.xml  readme.md  setup.py
impact_urdf/config/: components.yaml
impact_urdf/scripts/: README.md  frames.gv  gazebo_references.py  joints.py  jointsold.py  links.py  materials.py  plugins.py  test.py  transmission.py  urdf.db  urdf.py  urdf_subcriber.py  xacro.py  xacro_xml.py
impact_urdf/urdf/: output.urdf  output.xacro
