<?xml version="1.0"?>
<package format="3">
  <name>impact_motion</name>
  <version>0.0.0</version>
  <description>The impact_motion package</description>
  <maintainer email="ar4@todo.todo">ar4</maintainer>

  <license>TODO</license>



  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>find_object_2d</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>





