<?xml version="1.0"?>
<package format="3">
  <name>impact_camera_calibration_description</name>
  <version>0.0.0</version>
  <description>The impact_camera_calibration_description package</description>

  <maintainer email="brent@todo.todo">brent</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


